test-svg commit

--- a/index.html
+++ b/index.html
@@ -47,6 +47,11 @@
             <div class="container">
                 <ul class="benefits list">
                     <li class="benefits-list-item">
+                        <div>
+                            <svg>
+                                <use href="../goit-markup-hw-04/images/svg_orig/antenna.svg"></use>
+                            </svg>
+                        </div>
                         <h3 class="benefits-title">Внимание к деталям</h3>
                         <p class="section-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                     </li>
