--- a/portfolio.html
+++ b/portfolio.html
@@ -37,7 +37,7 @@
     <main class="main">
         <section class="section portfolio-section">
             <div class="container">
-                   <h1 class="section-title-hidden">Наши проекты</h1>
+                   <h1 class="visually-hidden">Наши проекты</h1>
             <ul class="projects-nav list">
                 <li class="projects-nav-item"><button class="button" type="button">Все</button></li>
                 <li class="projects-nav-item"><button class="button" type="button">Веб-сайты</button></li>
