hw 4 add footer and header modification

--- a/index.html
+++ b/index.html
@@ -329,49 +329,54 @@
     </main>
 <!-- Footer -->
 <footer class="footer">
-    <div class="container">
-        <a class="logo-footer" href="./index.html"><span class="left">Web</span><span class="right">Studio</span></a>
-        <address class="address-wrapper">
-            <a class="address" href="https://goo.gl/maps/v81cNEJhAymiVyWF6" target="_blank" rel="noreferrer noopener">г.
+    <div class="container footer-wrapper">
+        <div class="footer-address">
+           <a class="logo-footer" href="./index.html"><span class="left">Web</span><span class="right">Studio</span></a>
+            <address class="address-wrapper">
+                <a class="address-link" href="https://goo.gl/maps/v81cNEJhAymiVyWF6" target="_blank" rel="noreferrer noopener">г.
                 Киев, пр-т Леси Украинки, 26</a>
-            <ul class="mailto-footer-list list">
-                <li class="mailto-footer-list-items"><a class="link"
-                        href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li class="mailto-footer-list-items"><a class="link" href="tel:+380991111111">+38 099 111 11 11</a>
+                <ul class="mailto-footer-list list">
+                    <li class="mailto-footer-list-items">
+                        <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                    <li class="mailto-footer-list-items">
+                        <a class="link" href="tel:+380991111111">+38 099 111 11 11</a>
+                    </li>
+                </ul>
+        </address> 
+        </div>
+        <div class="footer-social">
+            <strong class="footer-social-title">Присоединяйтесь</strong>
+            <ul class="footer-social-list list">
+                <li class="footer-social-list-item">
+                    <a href="#" class="footer-social-link">
+                        <svg class="footer-social-link-icon" width="20" height="20">
+                            <use href="./images/sprite.svg#icon-instagram"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="footer-social-list-item">
+                    <a href="#" class="footer-social-link link">
+                        <svg class="footer-social-link-icon" width="20" height="20">
+                            <use href="./images/sprite.svg#icon-twitter"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="footer-social-list-item">
+                    <a href="#" class="footer-social-link link">
+                        <svg class="footer-social-link-icon" width="20" height="20">
+                            <use href="./images/sprite.svg#icon-facebook"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="footer-social-list-item">
+                    <a href="#" class="footer-social-link link">
+                        <svg class="footer-social-link-icon" width="20" height="20">
+                            <use href="./images/sprite.svg#icon-linkedin"></use>
+                        </svg>
+                    </a>
                 </li>
             </ul>
-        </address>
-        <h3 class="footer-social-title">Присоединяйтесь</h3>
-        <ul class="footer-social-list footer-social-wrapper list">
-            <li class="footer-social-list-item">
-                <a href="#" class="footer-social-link link">
-                    <svg class="footer-social-link-icon" width="20" height="20">
-                        <use href="./images/sprite.svg#icon-instagram"></use>
-                    </svg>
-                </a>
-            </li>
-            <li class="footer-social-list-item">
-                <a href="#" class="footer-social-link link">
-                    <svg class="footer-social-link-icon" width="20" height="20">
-                        <use href="./images/sprite.svg#icon-instagram"></use>
-                    </svg>
-                </a>
-            </li>
-            <li class="footer-social-list-item">
-                <a href="#" class="footer-social-link link">
-                    <svg class="footer-social-link-icon" width="20" height="20">
-                        <use href="./images/sprite.svg#icon-instagram"></use>
-                    </svg>
-                </a>
-            </li>
-            <li class="footer-social-list-item">
-                <a href="#" class="footer-social-link link">
-                    <svg class="footer-social-link-icon" width="20" height="20">
-                        <use href="./images/sprite.svg#icon-instagram"></use>
-                    </svg>
-                </a>
-            </li>
-        </ul>
+        </div>
     </div>
 </footer>
 </body>
