--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
             <ul class="mailto list">
                 <li class="mailto-items">
                     <a class="mailto-link link" href="mailto:info@devstudio.com">
-                    <svg class="mailto-icon" width="16", height="12">
+                    <svg class="mailto-icon" width="16" height="12">
                         <use href="./images/sprite.svg#icon-envelope"></use>
                     </svg>
                     info@devstudio.com
                     </a>
                 </li>
                 <li class="mailto-items"><a class="mailto-link link" href="tel:+380961111111">
-                    <svg class="mailto-icon" width="10", height="16">
+                    <svg class="mailto-icon" width="10" height="16">
                         <use href="./images/sprite.svg#icon-smartphone"></use>
                     </svg>
                     +38 096 111 11 11
@@ -49,7 +49,7 @@
     <main class="main">
         <!-- Hero -->
         <section class="hero">
-            <div class="hero-container">
+            <div class="container">
                 <h1 class="title">Эффективные решения <br> для вашего бизнеса</h1>
                 <button class="button" type="button">Заказать услугу</button>
             </div>
