--- a/portfolio.html
+++ b/portfolio.html
@@ -60,7 +60,7 @@
             </ul>
             <ul class="projects-list list">
                 <li class="projects-list-item">
-                    <a class="link" href=""><img src="./images/project-img1.jpg" alt="Технокряк" width="370">
+                    <a class="projects-list-item-link link" href=""><img src="./images/project-img1.jpg" alt="Технокряк" width="370">
                         <div class="projects-list-content-wrapper">
                             <h2 class="title">Технокряк</h2>
                             <p class="section-text">Веб-сайт</p>
